ejercicios 1 y 2 de ejerciciosJavascriptParte2

--- a/entornoCliente/ejerciciosJavascriptParte2/ejerciciosBasicos/index.htm
+++ b/entornoCliente/ejerciciosJavascriptParte2/ejerciciosBasicos/index.htm
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio1</title>
-    <script src="ejercicio1.js"></script>
+    
+    <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <input type="submit" value="Inicializa Array" onclick="inicializar()">
+    <div id="box" class="box">
+        
+    </div>
+
+    <input id="entrada" type="text">
 </body>
+<script src="scripts.js"></script>
 </html>
