--- a/entornoCliente/ejerciciosJavascriptParte2/ejerciciosBasicos/index.htm
+++ b/entornoCliente/ejerciciosJavascriptParte2/ejerciciosBasicos/index.htm
@@ -13,6 +13,22 @@
     </div>
 
     <input id="entrada" type="text">
+    <p></p>
+    <input id="entrada2" type="text">
+    <button id="boton">Enviar</button>
+    </button>
+
+    <div id="galeria" class="galeria">
+        <div class="item_galeria">1</div>
+        <div class="item_galeria">2</div>
+        <div class="item_galeria">3</div>
+        <div class="item_galeria">4</div>
+        <div class="item_galeria">5</div>
+        <div class="item_galeria">6</div>
+        <div class="item_galeria">7</div>
+        <div class="item_galeria">8</div>
+        <div class="item_galeria">9</div>  
+    </div>
 </body>
 <script src="scripts.js"></script>
 </html>
