ejercicios callback y ajax

--- a/entornoCliente/ejerciciosAjax/index.html
+++ b/entornoCliente/ejerciciosAjax/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio Callback</title>
+    <title>ajaxHttpRequest</title>
 </head>
 <body>
-    
+    <h1>USUARIOS</h1>
+    <button id="boton">Get Users</button>
+    <div id="usuarios">
 
-<script src="script.js"></script>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
